# sagemaker-feature-store-cli

./: .gitignore  LICENSE  MANIFEST.in  README.md  build-windows.bat  calculate_feature_store_size.py  put-get.json  pyproject.toml  requirements.txt  sagemaker_feature_store_batch_updater.py  setup.py
docs/: 01.list.md  02.create.md  03.get.md  04.put.md  05.bulk-get.md  06.bulk-put.md  07.export.md  08.clear.md  09.migrate.md  10.delete.md  11.analyze.md  12.add-features.md  13.schema.md  14.read-parquet.md  14.schema-template.md  15.bulk-update.md
examples/: bulk-get.json  bulk-put.json  sample_record_ids.csv  sample_record_ids.json  sample_records.csv  sample_records.json  schema.json  usage_examples.md
feat/create-delete/: 1.create-plan.md  2.delete-plan.md
feat/export/: export-plan.md
feat/migration/: 1.list-plan.md  2.clear-plan.md  3.migrate-plan.md  enhancement_plan.md
scripts/: build.bat  build.py  build.sh
src/sagemaker_fs_cli/: __init__.py  __main__.py  cli.py  config.py  main.py
src/sagemaker_fs_cli/commands/: __init__.py  add_features_cmd.py  analyze_cmd.py  batch_update_cmd.py  bulk_get_cmd.py  bulk_put_cmd.py  clear_cmd.py  create_cmd.py  delete_cmd.py  export_cmd.py  get_cmd.py  list_cmd.py  migrate_cmd.py  put_cmd.py  read_parquet_cmd.py
src/sagemaker_fs_cli/utils/: __init__.py  file_handler.py  formatter.py
