[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sagemaker-featurestore-cli"
version = "1.0.0"
description = "CLI tool for managing SageMaker FeatureStore Online operations"
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "boto3>=1.28.0",
    "click>=8.0.0",
    "pandas>=1.5.0",
    "tabulate>=0.9.0",
    "pydantic>=2.0.0",
]

[project.scripts]
fs = "sagemaker_fs_cli.cli:cli"
sagemaker-fs = "sagemaker_fs_cli.cli:cli"
sm-fs = "sagemaker_fs_cli.cli:cli"

[project.urls]
Homepage = "https://github.com/yourusername/sagemaker-featurestore-cli"
Repository = "https://github.com/yourusername/sagemaker-featurestore-cli"
Issues = "https://github.com/yourusername/sagemaker-featurestore-cli/issues"